modules/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expenses
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - host: expenses.cloudapps.today # we need to create a DNS Record for the ingress lb as CNAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-controller
            port:
              number: 80
